[package]
name = "tyra"
version = "1.0.0"
authors = ["sers.dev <admin@sers.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sers-dev/tyra"
homepage = "https://github.com/sers-dev/tyra"
documentation = "https://docs.rs/tyra"
description = "Typed Actor System"
keywords = ["typed", "actor", "scaling", "concurrency", "tyra"]
categories = ["network-programming", "asynchronous", "concurrency"]
exclude = ["/.github", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tyra"
path = "src/lib.rs"

[dependencies]
config = "0.13.3"
hostname = "0.3.1"
num_cpus = "1.15.0"
threadpool = "1.8.1"
crossbeam-channel = "0.5.7"
flume = "0.10.14"
dashmap = "5.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-encrypt = "0.7.0"
thiserror = "1.0"
log = "0.4"
ctrlc = { version = "3.2.5", features = ["termination"] }
mio = {version = "0.8.6", features = ["os-poll", "os-ext", "net"]}
quiche = "0.17.1"
io-arc = "1.0.0"
hashring = "0.3.0"

[dev-dependencies]
bincode = "1.3.3"
ntest = "0.9.0"