[package]
name = "tyra"
version = "1.0.0"
authors = ["sers.dev <admin@sers.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sers-dev/tyra"
homepage = "https://github.com/sers-dev/tyra"
documentation = "https://docs.rs/tyra"
description = "Typed Actor System"
keywords = ["typed", "actor", "scaling", "concurrency", "tyra"]
categories = ["network-programming", "asynchronous", "concurrency"]
exclude = ["/.github", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tyra"
path = "src/lib.rs"

[dependencies]
config = "0.14.0"
hostname = "0.3.1"
num_cpus = "1.16.0"
threadpool = "1.8.1"
crossbeam-channel = "0.5.12"
flume = "0.11.0"
dashmap = "5.5.3"
serde = { version = "1.0.197", features = ["derive"] }
serde-encrypt = "0.7.0"
thiserror = "1.0.58"
log = "0.4.21"
ctrlc = { version = "3.4.4", features = ["termination"] }
mio = {version = "0.8.11", features = ["os-poll", "os-ext", "net"]}
quiche = "0.20.1"
io-arc = "1.0.0"
hashring = "0.3.3"
bincode = "1.3.3"
regex = "1.10.4"
trust-dns-resolver = "0.23.2"

[dev-dependencies]
ntest = "0.9.2"
simple_logger = "4.3.3"